Better content rendering via css:  avoid background -color bleed with display:flex

--- a/desktop/cmp/dialog/DialogStyles.scss
+++ b/desktop/cmp/dialog/DialogStyles.scss
@@ -15,8 +15,11 @@
     max-width: 100vh;
 
     .xh-dialog {
+      // width & needed to make charts fill in space
       width: 100%;
       height: 100%;
+      // flex needed to get content sizes correct (comment out and test /app/other/popups) to see background bleed issue
+      display: flex;
     }
   }
 
